apps/services/quake.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quake
  labels:
    app: quake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quake
  template:
    metadata:
      labels:
        app: quake
    spec:
      volumes:
      - name: data
        hostPath:
          path: /data/quake
          type: DirectoryOrCreate
      containers:
      - name: quake
        image: jberrenberg/quake3
        imagePullPolicy: IfNotPresent
        args:
        - +exec
        - server.cfg
        volumeMounts:
        - name: data
          mountPath: /home/ioq3srv/.q3a/baseq3
        ports:
        - name: quake
          protocol: UDP
          containerPort: 27960
---
kind: Service
apiVersion: v1
metadata:
  name: quake
spec:
  selector:
    app: quake
  ports:
  - name: quake
    protocol: UDP
    port: 27960
    targetPort: quake
    nodePort: 30960
  type: NodePort
