apps/services/jupyter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      hostname: jupyter
      volumes:
      - name: jupyter
        hostPath:
          path: /data/home/jupyter
          type: DirectoryOrCreate
      containers:
      - name: jupyter
        image: gorilych/jupyter:v0.0.3
        imagePullPolicy: IfNotPresent
        args:
        - start-notebook.sh
        - "--ip='*'"
        - "--port=8888"
        - "--no-browser"
        - "--config=/home/jovyan/work/.config.py"
        ports:
        - containerPort: 8888
          name: jupyter
        volumeMounts:
        - mountPath: /home/jovyan/work
          name: jupyter
---
kind: Service
apiVersion: v1
metadata:
  name: jupyter
spec:
  selector:
    app: jupyter
  ports:
  - name: jupyter
    protocol: TCP
    port: 80 
    targetPort: jupyter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/auth-url: https://oauth2.gorilych.ru/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.gorilych.ru/oauth2/start?rd=$scheme://$host$request_uri
spec:
  tls:
  - secretName: san-gorilych-ru-tls
    hosts:
    - jupyter.gorilych.ru
  rules:
    - host: jupyter.gorilych.ru
      http:
        paths:
        - backend:
            serviceName: jupyter
            servicePort: 80
